# python-task

./: .~lock.output.xlsx#  .~lock.vehicles.csv#  .~lock.vehicles_2023-11-01T16-44-15.xlsx#  .~lock.vehicles_2023-11-01T17-25-51.xlsx#  .~lock.vehicles_2023-11-01T17-31-29.xlsx#  README.md  client.py  output.xlsx  pyproject.toml  requirements.txt  server.py  vehicles_2023-11-01T16-44-15.xlsx  vehicles_2023-11-01T17-25-51.xlsx  vehicles_2023-11-01T17-31-29.xlsx
