[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Riza Semih Koca <rsemihkoca@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
argparse = "^1.4.0"
requests = "^2.31.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
