[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Riza Semih Koca <rsemihkoca@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
argparse = "^1.4.0"
requests = "^2.31.0"
pandas = "^2.1.2"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
datetime = "^5.2"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
pydantic = "^2.4.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
